--- a/styleSVG.css
+++ b/styleSVG.css
@@ -57,6 +57,11 @@ svg circle:nth-child(2) {
     stroke: #ff04f7;
 }
 
+.skills .card:nth-child(4) svg circle:nth-child(2) {
+    stroke-dashoffset: calc(320 - (320 * 35) / 100);
+    stroke: #fffb00;
+}
+
 .content .card {
     position: relative;
     width: 250px;
